# juce-spectroscope19

./: CMakeLists.txt  Chromagram.cpp  Chromagram.h  ChromagramMath.cpp  ChromagramMath.h  ChromagramWidget.cpp  ChromagramWidget.h  Fifo.h  ManagedOpenGLComponent.h  OpenGLFloatTexture.cpp  OpenGLFloatTexture.h  OpenGLHelpers.cpp  OpenGLHelpers.h  README.md  ShaderBasedComponent.cpp  ShaderBasedComponent.h  Spectrogram.cpp  Spectrogram.h  SpectrogramWidget.cpp  SpectrogramWidget.h  createResources.cmake  oscilloscope.frag.glsl
shaders/: oscilloscope.frag.glsl  oscilloscope.vert.glsl  spectrogram.frag.glsl  spectrogram.vert.glsl
